Name:           satchmo
Version:        1.6.1

License:        GPL
License-file:	gpl-2.0.txt
Author:         Pepe Iborra, Johannes Waldmann
Maintainer:	Johannes Waldmann
Homepage:       http://dfa.imn.htwk-leipzig.de/satchmo/
		http://github.com/pepeiborra/satchmo/
Synopsis:       SAT encoding monad
description:	Encoding for boolean and integral constraints into (QBF-)CNF-SAT.
		The encoder is provided as a State monad (hence the "mo" in "satchmo").
		This package contains functions that construct problems,
                to solve them, you need package satchmo-backends.
Category:	Algorithms
Build-depends:  mtl, process, containers, base, array, bytestring, directory
Exposed-modules:
	Satchmo.Data
        Satchmo.Solve
        Satchmo.Boolean
	Satchmo.Counting
	Satchmo.Code
	Satchmo.Binary
	Satchmo.Binary.Op.Common
	Satchmo.Binary.Op.Fixed
	Satchmo.Binary.Op.Flexible
	Satchmo.Relation
	Satchmo.Relation.Data
	Satchmo.Relation.Op
	Satchmo.Relation.Prop
	Satchmo.MonadSAT
	Satchmo.SAT
	Satchmo.Simple
	Satchmo.SAT.Weighted
Other-modules:
	Satchmo.Binary.Data
        Satchmo.Boolean.Op
        Satchmo.Boolean.Data
hs-source-dirs:	.
extensions: 
build-type: Simple
ghc-options: -funbox-strict-fields -O2
ghc-prof-options: -auto