Name:           satchmo
Version:        2.0.0

License:        GPL
License-file:	gpl-2.0.txt
Author:         Pepe Iborra, Johannes Waldmann, Alexander Bau
Maintainer:	Johannes Waldmann
Homepage:       http://dfa.imn.htwk-leipzig.de/satchmo/
		http://github.com/pepeiborra/satchmo/
Synopsis:       SAT encoding monad
description:	Encoding for boolean and integral constraints into (QBF-)CNF-SAT.
		The encoder is provided as a State monad (hence the "mo" in "satchmo").
		This package contains functions that construct problems,
                to solve them, you need package satchmo-backends.
Category:	Algorithms
cabal-version:  >= 1.6
build-type: Simple

Library
    ghc-options: -funbox-strict-fields
    Build-depends:  mtl, process, containers, base == 4.*, array, bytestring, directory, minisat
    Exposed-modules:
        Satchmo.Data
        Satchmo.Data.Default
        Satchmo.Solve
        Satchmo.Boolean
        Satchmo.Counting
        Satchmo.Code
        Satchmo.Integer
        Satchmo.Binary
        Satchmo.Binary.Op.Common
        Satchmo.Binary.Op.Fixed
        Satchmo.Binary.Op.Flexible
        Satchmo.BinaryTwosComplement.Op.Fixed
        Satchmo.BinaryTwosComplement
        Satchmo.Unary
        Satchmo.Unary.Op.Common
        Satchmo.Unary.Op.Fixed
        Satchmo.Unary.Op.Flexible
        Satchmo.Polynomial
        Satchmo.PolynomialN
        Satchmo.PolynomialSOS
        Satchmo.Relation
        Satchmo.Relation.Data
        Satchmo.Relation.Op
        Satchmo.Relation.Prop
        Satchmo.MonadSAT
        Satchmo.SAT
        Satchmo.SAT.Tmpfile
        Satchmo.SAT.Mini
        -- Satchmo.SAT.BS
        -- Satchmo.SAT.Seq
        -- Satchmo.SAT.Sequence
        -- Satchmo.Simple
        -- Satchmo.SAT.Weighted
        Satchmo.Numeric
        Satchmo.Binary.Numeric
        Satchmo.BinaryTwosComplement.Numeric
        Satchmo.Integer.Difference
        Satchmo.Polynomial.Numeric
    Other-modules:
        Satchmo.Binary.Data
        Satchmo.BinaryTwosComplement.Data
        Satchmo.BinaryTwosComplement.Op.Common
        Satchmo.Unary.Data
        Satchmo.Integer.Data
        Satchmo.Boolean.Op
        Satchmo.Integer.Op
        Satchmo.Boolean.Data
    hs-source-dirs:     .
    extensions: 

